# Pidgin-GPG

./: README  README.md  configure.ac  installer.nsi  pidgin-gpg.c  win32.sh
.github/workflows/: build.yml
src/: Makefile.am  pidgin-gpg.c
